# ArkaNova

./: README.md  docker-compose.yml
IoT/: sketch_dec15a.ino
IoT/sketch_dec15a/: sketch_dec15a.ino
android/: settings.gradle
android/app/: build.gradle
android/app/src/androidTest/java/com/example/fuckingandroid/: ExampleInstrumentedTest.kt
android/app/src/androidTest/java/com/example/ihateandroid/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/example/fuckingandroid/: AddSolarPanelActivity.kt  ApiService.kt  DashboardActivity.kt  DialogEditProfileFragment.kt  EditPanelActivity.kt  HomeActivity.kt  LoggerUtil.kt  MainActivity.kt  ProfileActivity.kt  RegisterActivity.kt  RetrofeitClient.kt  SensorEditableAdapter.kt  SolarPanelAdapter.kt
android/app/src/main/java/com/example/ihateandroid/: AddSolarPanelActivity.kt  (+12 more)
android/app/src/main/res/color/: bottom_nav_item_color_selector.xml
android/app/src/main/res/drawable/: circle_gray.xml  circle_orange.xml  gradient_background.xml  ic_alert.xml  ic_dashboard.xml  ic_delete.xml  ic_generic_sensor.xml  ic_home.xml  ic_lightning.xml  ic_more_vert.xml  ic_no_data.xml  ic_profile.xml  ic_solar_panel.xml  ic_thermometer.xml  ic_warning.xml
android/app/src/main/res/layout/: activity_add_solar_panel.xml  activity_dashboard.xml  activity_edit_panel.xml  activity_home.xml  activity_main.xml  activity_profile.xml  activity_register.xml  dialog_add_sensor.xml  dialog_edit_profile.xml  list_item_sensor_editable.xml  list_item_solar_panel.xml
android/app/src/main/res/menu/: bottom_navigation.xml  panel_item_menu.xml
android/app/src/main/res/values/: colors.xml  strings.xml  styles.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/gradle/wrapper/: gradle-wrapper.properties
backend/: .gitignore  CMakeLists.txt  Dockerfile  README.md  api-deployment.yaml  api-service.yaml  apibuilder.sh  config.ini  locustfile.py  main.cpp  mqttfactory.cpp  mqttfactory.h  routefactory.cpp  routefactory.h
backend/models/: measurement.cpp  measurement.h  sensor.cpp  sensor.h  sensortype.cpp  sensortype.h  solarpanel.cpp  solarpanel.h  user.cpp  user.h
backend/repositories/: measurementrepository.cpp  measurementrepository.h  sensorrepository.cpp  sensorrepository.h  sensortyperepository.cpp  sensortyperepository.h  solarpanelrepository.cpp  solarpanelrepository.h  userrepository.cpp  userrepository.h
backend/routes/: backuphandler.cpp  backuphandler.h  measurementhandler.cpp  measurementhandler.h  mqttfactory.cpp  mqttfactory.h  mqttmeasurementhandler.cpp  mqttmeasurementhandler.h  routefactory.cpp  routefactory.h  sensorhandler.cpp  sensorhandler.h  solarpanelhandler.cpp  solarpanelhandler.h  userhandler.cpp  userhandler.h
backend/utils/: responsefactory.cpp  responsefactory.h
db/: ArkaNova.sql
mosquitto/: mosquitto.conf  pwfile
web/: index.html  package-lock.json  package.json  vite.config.ts
web/public/: index.html  manifest.json
web/src/: App.tsx
web/src/components/: Navigation.tsx  ProtectedRoute.tsx
web/src/config/: api.ts
web/src/i18n/: config.ts
web/src/i18n/locales/: en-US.ts  uk-UA.ts
web/src/i18n/locales/en-US/: admin.json
web/src/i18n/locales/uk-UA/: admin.json
web/src/locales/en/: dashboard.json  panels.json  profile.json  sensors.json
web/src/locales/uk/: dashboard.json  panels.json  profile.json  sensors.json
web/src/pages/: AdminDashboardPage.tsx  DashboardPage.tsx  HomePage.tsx  LoginPage.tsx  ProfilePage.tsx  RegisterPage.tsx  SensorsPage.tsx  SolarPanelsPage.tsx
web/src/services/: auth.ts
web/src/theme/: theme.ts
web/src/types/: api.ts  dashboard.ts
(+2 files in other folders)
